Scrollbar fix

--- a/public/theme/designview.css
+++ b/public/theme/designview.css
@@ -619,3 +619,9 @@
     float: right;
     height: 100%;
 }
+
+.signStepsBody.fixed{
+    position:fixed;
+    top:0px;
+    z-index: 1000;
+}
